<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whatscover.android.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/reLayTopBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@color/topBarColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_insurance_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size20"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/liLayBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="onClickBack">

            <ImageButton
                android:layout_width="@dimen/margin_22"
                android:layout_height="@dimen/margin_22"
                android:layout_marginLeft="@dimen/margin_3"
                android:background="@drawable/ic_back_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_3"
                android:text="@string/back"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size18"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="@dimen/btn_menu_width"
            android:layout_height="@dimen/btn_menu_width"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/ic_main_menu"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/reLayTopBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/top_bar"
        android:paddingLeft="@dimen/margin_30"
        android:paddingRight="@dimen/margin_30">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="72dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="0.8">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onClickLogo"
                    android:src="@drawable/ic_logo_insurance31"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="0.8"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy_name"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray2"
                    android:textSize="@dimen/text_size20"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks_for_your_interest"
                    android:textColor="#BCD8DD"
                    android:textSize="@dimen/text_size18"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_let_us_know_best_time_and_place_to_meet"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_3"
                android:paddingBottom="@dimen/margin_3">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/back_rectangle_text">
                </Spinner>
                <!--android:entries="@array/payment_arrays"-->

                <!--<EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="Available Time"
                    android:textStyle="italic"
                    android:background="@drawable/back_rectangle_text">
                </EditText>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:hint="Available Time"
                    android:textStyle="italic">
                </TextView>

                <ImageView
                    android:layout_width="@dimen/margin_45"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_triangle_off4"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_3"
                android:paddingBottom="@dimen/margin_3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="Select Preffered Date"
                    android:textStyle="italic"
                    android:background="@drawable/back_rectangle_text">
                </TextView>

                <ImageView
                    android:layout_width="@dimen/margin_45"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_calendar_off4"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_3"
                android:paddingBottom="@dimen/margin_3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="Type in Preffered Location"
                    android:textStyle="italic"
                    android:background="@drawable/back_rectangle_text">
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:onClick="onClickSubmit"
            android:background="@drawable/btn_clicked_brown"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:layout_alignParentBottom="true"
        android:background="@color/bottomBarColor"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_placeholder"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size20"/>
    </LinearLayout>

</RelativeLayout>
